--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,9 @@
         android:icon="@drawable/abc_ic_search_api_material"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+        android:id="@+id/donate"
+        android:title="@string/donate"
+        app:showAsAction="never"/>
 </menu>
