--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#161616"
-    tools:context="br.com.tairoroberto.remoteok.splash.SplashActivity">
+    tools:context="com.remoteok.io.app.splash.SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
