--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".io.app.detail.view.DetailActivity"
-    tools:showIn="@layout/activity_detail"
+    tools:context=".detail.view.DetailActivity"
+
     android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_send_black_24dp"
+            android:src="@drawable/ic_guidelines"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
