--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dimen_8dp"
@@ -22,11 +21,11 @@
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
-            android:scaleType="center"
+            android:background="@color/green_e6f9fa"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/green_e6f9fa"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -45,16 +44,16 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dimen_8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginLeft="@dimen/dimen_8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="@dimen/dimen_8dp"
+            android:maxLines="3"
             android:text="title"
             android:textColor="#ffffff"
             android:textSize="@dimen/dimen_14sp"
-            android:maxLines="3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="@dimen/dimen_8dp"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textViewTitle"
