--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -32,7 +32,7 @@
         <ImageView
             android:id="@+id/imageViewGradient"
             android:layout_width="0dp"
-            android:layout_height="@dimen/dimen_100dp"
+            android:layout_height="@dimen/dimen_130dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="@dimen/dimen_8dp"
         android:layout_marginStart="@dimen/dimen_8dp"
         tools:text="title"
-        android:fontFamily="@font/sf_ui_text_lightitalic"
+        android:fontFamily="@font/sf_ui_text_light"
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewOverview"
