--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,9 +4,9 @@
                                     xmlns:tools="http://schemas.android.com/tools"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="@dimen/dimen_8dp"
                                     android:layout_marginEnd="@dimen/dimen_16dp"
                                     android:layout_marginStart="@dimen/dimen_16dp"
+                                    android:layout_marginTop="@dimen/dimen_8dp"
                                     android:background="@null"
                                     android:elevation="@dimen/dimen_4dp"
                                     android:orientation="vertical">
@@ -21,13 +21,13 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginBottom="0dp"
-            android:background="@color/colorPrimaryDark"
             android:layout_marginStart="8dp"
+            android:background="@color/colorPrimaryDark"
             android:scaleType="centerInside"
             app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_253x199" />
+            app:srcCompat="@drawable/logo_253x199"/>
 
 
         <TextView
@@ -39,9 +39,9 @@
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/sf_ui_text_heavy"
+            android:maxLines="2"
             android:textColor="#000000"
             android:textSize="16sp"
-            android:maxLines="2"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -57,15 +57,15 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
-            android:maxLines="3"
             android:fontFamily="@font/sf_ui_text_light"
+            android:maxLines="3"
             android:textAlignment="viewStart"
             android:textColor="#000000"
             android:textSize="@dimen/dimen_14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-            tools:text="Tenth Avenue CommerceTenth Avenue CommerceTenth Avenue Commerce" />
+            tools:text="Tenth Avenue CommerceTenth Avenue CommerceTenth Avenue Commerce"/>
 
         <ProgressBar
             android:id="@+id/progressImage"
@@ -88,6 +88,9 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:paddingBottom="@dimen/dimen_4dp"
+            android:paddingTop="@dimen/dimen_4dp"
             app:flexDirection="row"
             app:flexWrap="wrap"
             app:justifyContent="flex_start"
@@ -99,24 +102,24 @@
             <Button
                 android:id="@+id/tag1"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_marginTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:background="@drawable/border_button"
                 android:layout_marginEnd="@dimen/dimen_4dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_button"
                 app:layout_flexGrow="1"
-                tools:text="Dev" />
+                tools:text="Dev"/>
 
             <Button
                 android:id="@+id/tag2"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="@dimen/dimen_4dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/border_button"
                 app:layout_flexGrow="1"
-                tools:text="marketing" />
+                tools:text="marketing"/>
 
             <Button
                 android:id="@+id/tag3"
@@ -126,7 +129,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/border_button"
                 app:layout_flexGrow="1"
-                tools:text="full " />
+                tools:text="full "/>
         </com.google.android.flexbox.FlexboxLayout>
 
     </android.support.constraint.ConstraintLayout>
