--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -31,7 +31,7 @@
 
 
         <TextView
-            android:id="@+id/textViewOverview"
+            android:id="@+id/textViewDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dimen_16dp"
@@ -82,7 +82,7 @@
             android:src="@drawable/ic_guidelines"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
             app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
