--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -50,7 +50,7 @@
             tools:text="Senior Full Stack Web Developer" />
 
         <TextView
-            android:id="@+id/textViewOverview"
+            android:id="@+id/textViewDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -97,7 +97,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewOverview">
+            app:layout_constraintTop_toBottomOf="@+id/textViewDescription">
 
             <Button
                 android:id="@+id/tag1"
