--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
                                              android:id="@+id/container"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".home.view.MainActivity">
+                                             tools:context=".view.home.MainActivity">
 
 </android.support.constraint.ConstraintLayout>
