--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".detail.view.DetailActivity"
+    tools:context=".view.detail.DetailActivity"
 
     android:fillViewport="true">
 
@@ -30,7 +30,7 @@
             tools:text="Title"/>
 
 
-        <TextView
+        <WebView
             android:id="@+id/textViewDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -72,18 +72,6 @@
             app:layout_constraintStart_toEndOf="@+id/imageViewPhone"
             app:layout_constraintTop_toBottomOf="@+id/textViewName"
             tools:text="2017-10-25" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_guidelines"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
-            app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
 
