adjust search jobs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="colorPrimary">#1C1C1C</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#f34840</color>
+    <color name="colorAccent">#FF374A</color>
     <color name="colorPrimaryText">#1C1C1C</color>
     <color name="green_175258">#175258</color>
     <color name="green_2bbc9b">#2BBC9B</color>
