--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/text1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:elevation="@dimen/dimen_16dp"
-    android:fontFamily="@font/sf_ui_text_light"
-    android:textAlignment="viewStart"
-    android:textSize="@dimen/dimen_18sp"
-    tools:text="Search Item" />
+    android:layout_height="wrap_content">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="@dimen/dimen_16dp"
+        android:layout_marginStart="@dimen/dimen_16dp"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:backgroundTint="@color/colorAccent"
+        android:elevation="@dimen/dimen_4dp"
+        app:cardCornerRadius="@dimen/dimen_8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textViewJob"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_8dp"
+            android:fontFamily="@font/nunito_regular"
+            android:padding="@dimen/dimen_8dp"
+            android:textAlignment="viewStart"
+            android:textColor="@color/white_f2feff"
+            android:textSize="@dimen/dimen_18sp"
+            android:textStyle="bold"
+            tools:text="Search Item" />
+    </android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
