--- a/app/src/main/res/layout/item_companies.xml
+++ b/app/src/main/res/layout/item_companies.xml
@@ -18,13 +18,12 @@
 
         <ImageView
             android:id="@+id/textViewLogo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@color/colorPrimaryDark"
             android:scaleType="centerInside"
-            app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/logo_400x200" />
@@ -33,7 +32,7 @@
         <TextView
             android:id="@+id/textViewTitle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_marginEnd="@dimen/dimen_8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -46,8 +45,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textViewLogo"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Senior Full Stack Web Developer" />
+            app:layout_constraintTop_toTopOf="@+id/textViewLogo"
+            tools:text="Senior Full Stack Web" />
 
         <TextView
             android:id="@+id/textViewDescription"
@@ -56,16 +55,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:ellipsize="end"
             android:fontFamily="@font/sf_ui_text_light"
-            android:maxLines="3"
             android:textAlignment="viewStart"
             android:textColor="#000000"
             android:textSize="@dimen/dimen_14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textViewLogo"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-            tools:text="Tenth Avenue CommerceTenth Avenue CommerceTenth Avenue Commerce" />
+            tools:text="13 remote jojs" />
 
         <ProgressBar
             android:id="@+id/progressImage"
@@ -89,8 +86,6 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:paddingBottom="@dimen/dimen_4dp"
-            android:paddingTop="@dimen/dimen_4dp"
             app:flexDirection="row"
             app:flexWrap="wrap"
             app:justifyContent="flex_start"
@@ -105,10 +100,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginEnd="@dimen/dimen_4dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:background="@drawable/border_button"
                 app:layout_flexGrow="1"
-                tools:text="Dev"/>
+                tools:text="Dev" />
 
             <Button
                 android:id="@+id/tag2"
@@ -116,20 +111,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginEnd="@dimen/dimen_4dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:background="@drawable/border_button"
                 app:layout_flexGrow="1"
-                tools:text="marketing"/>
+                tools:text="marketing" />
 
             <Button
                 android:id="@+id/tag3"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:background="@drawable/border_button"
                 app:layout_flexGrow="1"
-                tools:text="full "/>
+                tools:text="full " />
         </com.google.android.flexbox.FlexboxLayout>
 
     </android.support.constraint.ConstraintLayout>
