--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,7 @@
     <dimen name="dimen_70dp">70dp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
     <dimen name="dimen_22sp">22sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
