Add companies and jobs home layout to a fluid layout

--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="@dimen/dimen_16dp"
             android:layout_marginTop="@dimen/dimen_24dp"
             android:fontFamily="@font/sf_ui_text_light"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="#252220"
             android:textSize="@dimen/dimen_24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
             android:layout_marginTop="@dimen/dimen_8dp"
             android:autoLink="phone"
             android:fontFamily="@font/sf_ui_text_regular"
-            android:textColorLink="@color/colorPrimaryDark"
+            android:textColorLink="#605751"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewPhone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
