--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:fitsSystemWindows="true"
-                                                 tools:context=".view.detail.DetailActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".view.detail.DetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -24,32 +24,41 @@
             app:toolbarId="@+id/toolbar">
 
             <ImageView
-                android:id="@+id/textViewLogo"
+                android:id="@+id/imageViewLogo"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_300dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo_1200x1200"
-                android:transitionName="image"/>
+                android:background="#000000"
+                android:scaleType="center"
+                android:src="@drawable/logo_400x200"
+                android:transitionName="image" />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_130dp"
                 android:layout_gravity="bottom"
                 android:layout_marginTop="0dp"
-                app:srcCompat="@drawable/gradient_black"/>
+                app:srcCompat="@drawable/gradient_black" />
 
             <ProgressBar
                 android:id="@+id/progressImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay">
+
+                <ImageView
+                    android:id="@+id/imageBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_arrow_back_black_24dp" />
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -63,7 +72,7 @@
         app:layout_anchor="@+id/app_bar"
         app:layout_anchorGravity="right|bottom" />
 
-    <include layout="@layout/content_detail"/>
+    <include layout="@layout/content_detail" />
 
 
 </android.support.design.widget.CoordinatorLayout>
