--- a/app/src/main/res/layout/fragment_companies.xml
+++ b/app/src/main/res/layout/fragment_companies.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#EBEFF0"
+    android:background="@null"
     tools:context="com.remoteok.io.app.view.companies.CompaniesFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -17,7 +16,7 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_gravity="center"
+        android:layout_gravity="center"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
