--- a/app/src/main/res/layout/item_companies.xml
+++ b/app/src/main/res/layout/item_companies.xml
@@ -1,132 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    xmlns:tools="http://schemas.android.com/tools"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginEnd="@dimen/dimen_16dp"
-                                    android:layout_marginStart="@dimen/dimen_16dp"
-                                    android:layout_marginTop="@dimen/dimen_8dp"
-                                    android:background="@null"
-                                    android:elevation="@dimen/dimen_4dp"
-                                    android:orientation="vertical">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="@dimen/dimen_16dp"
+    android:layout_marginStart="@dimen/dimen_16dp"
+    android:layout_marginTop="@dimen/dimen_8dp"
+    android:background="@drawable/background_card_border_white"
+    android:elevation="@dimen/dimen_4dp"
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimaryDark"
+        android:scaleType="centerInside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_400x200" />
+
+
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="@dimen/dimen_8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/sf_ui_text_regular"
+        android:maxLines="2"
+        android:textColor="#252220"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
+        tools:text="Senior Full Stack Web" />
+
+    <TextView
+        android:id="@+id/textViewDescription"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/sf_ui_text_medium"
+        android:textAlignment="viewStart"
+        android:textColor="#605751"
+        android:textSize="@dimen/dimen_14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+        tools:text="13 remote jojs" />
 
-        <ImageView
-            android:id="@+id/textViewLogo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/colorPrimaryDark"
-            android:scaleType="centerInside"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_400x200" />
+    <ProgressBar
+        android:id="@+id/progressImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewLogo"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
+        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toTopOf="@+id/imageViewLogo" />
 
 
-        <TextView
-            android:id="@+id/textViewTitle"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="@dimen/dimen_8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/sf_ui_text_medium"
-            android:maxLines="2"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/textViewLogo"
-            app:layout_constraintTop_toTopOf="@+id/textViewLogo"
-            tools:text="Senior Full Stack Web" />
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/buttonsContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:flexDirection="row"
+        app:flexWrap="wrap"
+        app:justifyContent="flex_start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDescription">
 
-        <TextView
-            android:id="@+id/textViewDescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/sf_ui_text_light"
-            android:textAlignment="viewStart"
-            android:textColor="#000000"
-            android:textSize="@dimen/dimen_14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textViewLogo"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-            tools:text="13 remote jojs" />
-
-        <ProgressBar
-            android:id="@+id/progressImage"
+        <Button
+            android:id="@+id/tag1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewLogo"
-            app:layout_constraintEnd_toEndOf="@+id/textViewLogo"
-            app:layout_constraintStart_toStartOf="@+id/textViewLogo"
-            app:layout_constraintTop_toTopOf="@+id/textViewLogo"/>
+            android:layout_height="36dp"
+            android:layout_marginEnd="@dimen/dimen_4dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/border_button"
+            android:fontFamily="@font/sf_ui_text_light"
+            android:textColor="@color/colorAccent"
+            app:layout_flexGrow="1"
+            tools:text="Dev" />
 
+        <Button
+            android:id="@+id/tag2"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_marginEnd="@dimen/dimen_4dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/border_button"
+            android:fontFamily="@font/sf_ui_text_light"
+            android:textColor="@color/colorAccent"
+            app:layout_flexGrow="1"
+            tools:text="marketing" />
 
-        <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/buttonsContainer"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:flexDirection="row"
-            app:flexWrap="wrap"
-            app:justifyContent="flex_start"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDescription">
+        <Button
+            android:id="@+id/tag3"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/border_button"
+            android:fontFamily="@font/sf_ui_text_light"
+            android:textColor="@color/colorAccent"
+            app:layout_flexGrow="1"
+            tools:text="full " />
+    </com.google.android.flexbox.FlexboxLayout>
 
-            <Button
-                android:id="@+id/tag1"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginEnd="@dimen/dimen_4dp"
-                android:layout_marginTop="4dp"
-                android:background="@drawable/border_button"
-                app:layout_flexGrow="1"
-                tools:text="Dev" />
-
-            <Button
-                android:id="@+id/tag2"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginEnd="@dimen/dimen_4dp"
-                android:layout_marginTop="4dp"
-                android:background="@drawable/border_button"
-                app:layout_flexGrow="1"
-                tools:text="marketing" />
-
-            <Button
-                android:id="@+id/tag3"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginTop="4dp"
-                android:background="@drawable/border_button"
-                app:layout_flexGrow="1"
-                tools:text="full " />
-        </com.google.android.flexbox.FlexboxLayout>
-
-    </android.support.constraint.ConstraintLayout>
-
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
