Adjust crashes in picasso

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -71,10 +71,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
-        android:fontFamily="@font/sf_ui_text_medium"
+        android:fontFamily="@font/sf_ui_text_light"
         android:textAlignment="viewStart"
         android:textColor="#605751"
-        android:textSize="@dimen/dimen_14sp"
+        android:textSize="@dimen/dimen_12sp"
+        android:maxLines="3"
         app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewLogo"
