--- a/app/src/main/res/layout/item_companies.xml
+++ b/app/src/main/res/layout/item_companies.xml
@@ -21,7 +21,7 @@
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_400x200" />
+        app:srcCompat="@drawable/ic_logo_400x200" />
 
 
     <TextView
@@ -50,10 +50,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/sf_ui_text_medium"
+        android:fontFamily="@font/sf_ui_text_light"
         android:textAlignment="viewStart"
         android:textColor="#605751"
-        android:textSize="@dimen/dimen_14sp"
+        android:textSize="@dimen/dimen_12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
