--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,7 +29,7 @@
                 android:layout_height="@dimen/dimen_300dp"
                 android:background="#000000"
                 android:scaleType="center"
-                android:src="@drawable/logo_400x200"
+                android:src="@drawable/ic_logo_400x200"
                 android:transitionName="image" />
 
             <ImageView
