--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.15"
-        app:srcCompat="@drawable/logo_1200x1200" />
+        app:srcCompat="@drawable/ic_logo_1200x1200" />
 
     <VideoView
         android:id="@+id/videoView"
