--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="green_adfff1">#ADFFF1</color>
     <color name="white_f2feff">#F2FEFF</color>
     <color name="green_e6f9fa">#E6F9FA</color>
+    <color name="black">#000000</color>
 </resources>
