--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,13 +28,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_300dp"
                 android:background="#000000"
-                android:scaleType="center"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_logo_400x200"
                 android:transitionName="image" />
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_130dp"
+                android:layout_height="90dp"
                 android:layout_gravity="bottom"
                 android:layout_marginTop="0dp"
                 app:srcCompat="@drawable/gradient_black" />
