--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/dimen_16dp"
     android:layout_marginStart="@dimen/dimen_16dp"
     android:layout_marginTop="@dimen/dimen_8dp"
@@ -13,42 +13,42 @@
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:scaleType="centerCrop"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewLogo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="#000000"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/background_card_border_black"
         android:fontFamily="@font/pacifico"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/remote_ok"
         android:textColor="@color/white_f2feff"
-        android:textSize="@dimen/dimen_18sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
+        android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dimen_8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
@@ -58,29 +58,27 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewLogo"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLogo"
         tools:text="Senior Full Stack Web Developer" />
 
     <TextView
         android:id="@+id/textViewDescription"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/sf_ui_text_light"
+        android:maxLines="4"
         android:textAlignment="viewStart"
         android:textColor="#605751"
         android:textSize="@dimen/dimen_12sp"
-        android:maxLines="3"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewLogo"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
-        app:layout_constraintVertical_bias="0.0"
         tools:text="Tenth Avenue CommerceTenth Avenue CommerceTenth Avenue Commerce" />
 
     <ProgressBar
@@ -105,13 +103,15 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:flexDirection="row"
         app:flexWrap="wrap"
         app:justifyContent="flex_start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDescription">
 
         <Button
             android:id="@+id/tag1"
@@ -119,9 +119,9 @@
             android:layout_height="36dp"
             android:layout_marginEnd="@dimen/dimen_4dp"
             android:background="@drawable/border_button"
+            android:fontFamily="@font/sf_ui_text_light"
             android:textColor="@color/colorAccent"
             app:layout_flexGrow="1"
-            android:fontFamily="@font/sf_ui_text_light"
             tools:text="Dev" />
 
         <Button
@@ -130,8 +130,8 @@
             android:layout_height="36dp"
             android:layout_marginEnd="@dimen/dimen_4dp"
             android:background="@drawable/border_button"
-            android:textColor="@color/colorAccent"
             android:fontFamily="@font/sf_ui_text_light"
+            android:textColor="@color/colorAccent"
             app:layout_flexGrow="1"
             tools:text="marketing" />
 
@@ -140,8 +140,8 @@
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:background="@drawable/border_button"
-            android:textColor="@color/colorAccent"
             android:fontFamily="@font/sf_ui_text_light"
+            android:textColor="@color/colorAccent"
             app:layout_flexGrow="1"
             tools:text="full " />
     </com.google.android.flexbox.FlexboxLayout>
