--- a/app/src/main/res/layout/fragment_highest_paid.xml
+++ b/app/src/main/res/layout/fragment_highest_paid.xml
@@ -4,10 +4,23 @@
     android:layout_height="match_parent"
     tools:context="com.remoteok.io.app.view.highestpaid.HighestPaidFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/title_highestpaid" />
+        android:scrollbars="vertical" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
 </FrameLayout>
