--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -6,11 +6,11 @@
         android:icon="@drawable/ic_briefcase"
         android:title="@string/title_jobs" />
 
-    <!--<item
+    <item
         android:id="@+id/navigation_highestpaid"
         android:icon="@drawable/ic_money"
         android:title="@string/title_highestpaid" />
--->
+
     <item
         android:id="@+id/navigation_companies"
         android:icon="@drawable/ic_space_rocket"
