--- a/base/src/main/res/menu/menu_detail.xml
+++ b/base/src/main/res/menu/menu_detail.xml
@@ -3,7 +3,8 @@
 
     <item
         android:id="@+id/menu_share"
+        android:icon="@drawable/ic_share_24dp"
+        android:title="@string/share"
         app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
-        app:showAsAction="always"
-        android:title="@string/share" />
+        app:showAsAction="ifRoom" />
 </menu>
